k8s/backend-deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
   name: backend-chat
   namespace: chatapp
spec:
  replicas: 1
  selector:
     matchLabels:
       app: backend
  template:
     metadata:
        name: backend-pod
        namespace: chatapp
        labels:
           app: backend
     spec:
        containers:
        - name: chatapp-backend
          image: divs11/chatapp-backend:latest
          ports:
          - containerPort: 5001
