k8s/frontend-deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
   name: frontend-chat
   namespace: chatapp
spec:
  replicas: 1
  selector:
     matchLabels:
       app: frontend
  template:
     metadata:
        name: frontend-pod
        namespace: chatapp
        labels:
           app: frontend
     spec:
        containers:
        - name: chatapp-frontend
          image: divs11/chatapp-frontend:latest
          ports:
          - containerPort: 80
