k8s/mongodb-deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
   name: mongodb-chat
   namespace: chatapp
spec:
  replicas: 1
  selector:
     matchLabels:
       app: mongodb
  template:
     metadata:
        name: mongodb-pod
        namespace: chatapp
        labels:
           app: mongodb
     spec:
        containers:
        - name: chatapp-mongodb
          image: mongo:latest
          ports:
          - containerPort: 27017
          volumeMounts:
          - name: mongodb-data
            mountPath: /mnt/data
        volumes:
        - name: mongodb-data
          persistentVolumeClaim:
            claimName: mongodb-pvc
