k8s/backend-service.yml
kind: Service
apiVersion: v1
metadata:
   name: backend
   namespace: chatapp
spec:
  selector:
    app: backend
  ports:
  - port: 5001
    targetPort: 5001
