k8s/mongodb-service.yml
kind: Service
apiVersion: v1
metadata:
   name: mongodb
   namespace: chatapp
spec:
  selector:
     app: mongodb
  ports:
  - port: 27017
    targetPort: 27017
